@@ -596,7 +596,7 @@ channelsnames[418] = "arte (S)";
 channels[418] = "S19.2E-1-1051-28724";
 channelsnames[419] = "PHOENIX (S)";
 channels[419] = "S19.2E-1-1051-28725";
-channelsnames[420] = "SIXX (S)";
+channelsnames[420] = "Sat.1 Gold (S)";
 channels[420] = "S19.2E-1-1107-17504";
 channelsnames[421] = "kabel eins (S)";
 channels[421] = "S19.2E-1-1107-17502";
@@ -622,7 +622,7 @@ channelsnames[431] = "kabel eins classics (S)";
 channels[431] = "S19.2E-1-1107-17506";
 channelsnames[432] = "RTL Living (S)";
 channels[432] = "S19.2E-1-1089-12030";
-channelsnames[433] = "SAT.1 emotions (S)";
+channelsnames[433] = "Pro7 MAXX (S)";
 channels[433] = "S19.2E-1-1107-17505";
 channelsnames[434] = "DAS VIERTE (S)";
 channels[434] = "S19.2E-133-5-1793";
@@ -979,7 +979,7 @@ channels[711] = "S19.2E-1-1020-7011";
 channelsnames[712] = "CNC World (S)";
 channels[712] = "S28.2E-2-2306-52580";
 channelsnames[713] = "PCNE Chinese (S)";
-channels[713] = "S28.2E-2-2409-50878";
+channels[713] = "S28.2E-2-2302-52118";
 //channelsnames[714] = "CCTV News (S)";
 //channels[714] = "S28.2E-2-2411-51011";
 //channelsnames[715] = "KBS_WORLD (S)";
@@ -1095,8 +1095,8 @@ channelsnames[806] = "RBC-TV (S)";
 channels[806] = "S13.0E-318-9000-8342";
 channelsnames[807] = "RT DOC (S)";
 channels[807] = "S13.0E-318-6500-487";
-channelsnames[808] = "PIK TV (S)";
-channels[808] = "S13.0E-318-6500-440";
+//channelsnames[808] = "PIK TV (S)";
+//channels[808] = "S13.0E-318-6500-440";
 channelsnames[809] = "R1 (S)";
 channels[809] = "S13.0E-318-13000-14607";
 channelsnames[810] = "TVRUS (S)";
@@ -1159,8 +1159,8 @@ channelsnames[845] = "TVP Seriale (S)";
 channels[845] = "S19.2E-1-1059-7108";
 channelsnames[846] = "TVP Kultura (S)";
 channels[846] = "S19.2E-1-1059-7106";
-channelsnames[847] = "BELSAT TV (S)";
-channels[847] = "S19.2E-1-1059-7107";
+channelsnames[847] = "TVP HD (S)";
+channels[847] = "S19.2E-1-1059-7120";
 channelsnames[848] = "TV Polonia (S)";
 channels[848] = "S19.2E-1-1059-7104";
 
@@ -1199,8 +1199,8 @@ channelsnames[912] = "Bloomberg European TV (S)";
 channels[912] = "S13.0E-318-13100-7302";
 channelsnames[913] = "Al Jazeera Intl (S)";
 channels[913] = "S13.0E-318-12600-1714";
-channelsnames[914] = "PRESS TV (S)";
-channels[914] = "S13.0E-318-8700-7944";
+//channelsnames[914] = "PRESS TV (S)";
+//channels[914] = "S13.0E-318-8700-7944";
 channelsnames[915] = "DW Europe (S)";
 channels[915] = "S13.0E-318-15500-607";
 channelsnames[916] = "Class News Tv (S)";
@@ -1213,8 +1213,8 @@ channelsnames[919] = "France 24 (en Francais) (S)";
 channels[919] = "S13.0E-318-200-13849";
 channelsnames[920] = "Canal 24 Horas (S)";
 channels[920] = "S13.0E-318-5000-13712";
-channelsnames[921] = "Press TV (S)";
-channels[921] = "S13.0E-318-6500-480";
+//channelsnames[921] = "Press TV (S)";
+//channels[921] = "S13.0E-318-6500-480";
 channelsnames[922] = "Chamber TV (S)";
 channels[922] = "S23.5E-3-3224-5220";
 channelsnames[923] = "Sky News (S)";
@@ -1227,8 +1227,8 @@ channelsnames[926] = "CNBC (S)";
 channels[926] = "S28.2E-2-2301-52111";
 channelsnames[927] = "CNN (S)";
 channels[927] = "S28.2E-2-2018-7140";
-channelsnames[928] = "FOX News (S)";
-channels[928] = "S28.2E-2-2031-4643";
+//channelsnames[928] = "FOX News (S)";
+//channels[928] = "S28.2E-2-2031-4643";
 channelsnames[929] = "RT HD(S)";
 channels[929] = "S28.2E-2-2312-53148";
 //SD channels[929] = "S28.2E-2-2409-50847";
@@ -1237,7 +1237,7 @@ channels[930] = "S28.2E-2-2412-51107";
 channelsnames[931] = "Russia Today (S)";
 channels[931] = "S19.2E-1-1022-6904";
 channelsnames[932] = "Russia Today Español (S)";
-channels[932] = "S19.2E-1-1026-10077";
+channels[932] = "S19.2E-1-1020-7013";
 
 channelsnames[950] = "Travel Channel (S)";
 channels[950] = "S28.2E-2-2602-54102";
