@@ -1570,6 +1570,12 @@ function StreamInfo(si) {
 	is.setObject("cfg.locale.ui","DEU",is.STORAGE_VOLATILE);
 	}
 
+	if(SI[2]=="1107") {
+	//Sat1/pro7 deutchland
+	is.setObject("cfg.locale.ui","DEU",is.STORAGE_VOLATILE);
+	}
+
+
 	if(SI[2]=="1057") {
 	//RTL HD transponder
 	is.setObject("cfg.locale.ui","GER",is.STORAGE_VOLATILE);
@@ -1596,6 +1602,12 @@ function StreamInfo(si) {
 	//sky Italia
 	is.setObject("cfg.locale.ui","ita",is.STORAGE_VOLATILE);
 	}
+
+	if(SI[0]=="S13.0E" && (SI[2]=="5400" || SI[2]=="12400" || SI[2]=="65419" || SI[2]=="65417" )) {
+	//Rai Italia
+	is.setObject("cfg.locale.ui","ita",is.STORAGE_VOLATILE);
+	}
+
 
 	if(SI[1]=="53" || (SI[0]=="S19.2E" && SI[2]=="1037") ) {
 	//Canal Digitaal/ TV Vlaanderen 
@@ -1718,7 +1730,14 @@ function StreamInfo(si) {
 		is.setObject("cfg.locale.ui","pol",is.STORAGE_VOLATILE);
 	}
 
-	if(SI[0]=="S19.2E" && ((SI[2]=="1074") || (SI[2]=="1018") || (SI[2]=="1024") || (SI[2]=="1068") || (SI[2]=="1070") || (SI[2]=="1072") || (SI[2]=="1076") || (SI[2]=="1080") || (SI[2]=="1084") || (SI[2]=="1086") || (SI[2]=="1090") || (SI[2]=="1092") || (SI[2]=="1094") || (SI[2]=="1096") || (SI[2]=="1100") || (SI[2]=="1102") || (SI[2]=="1106") || (SI[2]=="1110") || (SI[2]=="1112") || (SI[2]=="1114") || (SI[2]=="1116") || (SI[2]=="1118") || (SI[2]=="1120"))) {
+
+	if((SI[0]=="S19.2E" && SI[2]=="1059") ) {
+		//TVP transponder
+		is.setObject("cfg.locale.ui","pol",is.STORAGE_VOLATILE);
+	}
+
+
+	if(SI[0]=="S19.2E" && ( (SI[2]=="1018") || (SI[2]=="1020") || (SI[2]=="1022") || (SI[2]=="1024") || (SI[2]=="1068") || (SI[2]=="1070") || (SI[2]=="1072") || (SI[2]=="1074") || (SI[2]=="1076") || (SI[2]=="1080") || (SI[2]=="1084") || (SI[2]=="1086") || (SI[2]=="1090") || (SI[2]=="1092") || (SI[2]=="1094") || (SI[2]=="1096") || (SI[2]=="1100") || (SI[2]=="1102") || (SI[2]=="1106") || (SI[2]=="1110") || (SI[2]=="1112") || (SI[2]=="1114") || (SI[2]=="1116") || (SI[2]=="1118") || (SI[2]=="1120"))) {
 	//CanalSat S19.2
 		is.setObject("cfg.locale.ui","fra",is.STORAGE_VOLATILE);
 	}
@@ -1759,6 +1778,12 @@ function StreamInfo(si) {
 	if(SI[0]=="S19.2E" && SI[1]=="1" && SI[2]=="1060" ) {
 	is.setObject("cfg.locale.ui","spa",is.STORAGE_VOLATILE);
 	}
+
+//	if(SI[0]=="S13.0E" && ( SI[3]=="14802" || SI[3]=="14803" || SI[3]=="14804") ) {
+//		is.setObject("cfg.locale.ui","ger",is.STORAGE_VOLATILE);
+//		//doesn't work but dvbsnoop does show 'ISO639_2_language_code:  ger' 
+//	}
+
 
 }
 
