@@ -4,7 +4,8 @@ Motorola Vip : 1960, 1910, 1903, 1963.
 VDR 1.7.29
 
 0.23	Infobox for connection Error, not only ERRR on display but also the Infobox
-	
+	Updated EPG filter for Sat.1/Pro7, Rai (13E), TVP (19E)
+	channels update.	
 
 	
 
